This should be the final commit

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <p class="description">Our Equilibrium collection promotes balance and calm.</p>
   <section class="eth">
-    <p class="blue"><img src="images/icon-ethereum.svg" alt="">0.041 ETH</p>
+    <p class="blue"><img src="images/icon-ethereum.svg" alt="Ethereum">0.041 ETH</p>
     <p class="gray"> <img src="images/icon-clock.svg" alt="Clock">3 days left</p>
   </section>
   <section class="jules">
